--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,6 @@
             </plugin>
         </plugins>
     </build>
-
     <dependencies>
         <dependency>
             <groupId>net.sf.jasperreports</groupId>
@@ -135,11 +134,10 @@
             <artifactId>com-jaspersoft-ireport</artifactId>
             <version>${jasper.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.openrdf</groupId>
-            <artifactId>openrdf-sesame</artifactId>
-            <version>2.6.5-onejar</version>
-        </dependency>
+		<dependency>
+		    <groupId>org.eclipse.rdf4j</groupId>
+		    <artifactId>rdf4j-runtime</artifactId>
+	    </dependency>        
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
@@ -166,9 +164,18 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.6.1</version>
         </dependency>
-
     </dependencies>
-
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.eclipse.rdf4j</groupId>
+				<artifactId>rdf4j-bom</artifactId>
+				<version>2.2</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
     <reporting>
         <plugins>
             <plugin>
